--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React practice project",
   "main": "index.js",
   "scripts": {
-    "start": "node server/express-server.js"
+    "start": "node server/express-server.js",
+    "build": "browserify -t [ babelify --presets [ es2015 stage-0 react ] ] ./src/react-components/app.js -o ./public/js/app.js",
+    "build:ws": "watch 'npm run build' src"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,17 @@
   },
   "homepage": "https://github.com/rahul830ui/React-Project#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.2.0",
+    "express": "^4.13.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "watch": "^0.17.1"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2"
   }
 }
